# giga_video

./: .gitignore  CMakeLists (copy).txt  CMakeLists.txt  Makefile  README.md  REAMDE.md  make.sh
android/MyApplication/app/: proguard-rules.pro
android/MyApplication/app/src/main/java/com/example/wuliwei/myapplication/: MainActivity.java
android/MyApplication/app/src/main/res/layout/: activity_main.xml
android/MyApplication/app/src/main/res/menu/: menu_main.xml
android/MyApplication/app/src/test/java/com/example/wuliwei/myapplication/: ExampleUnitTest.java
camera/: CMakeLists.txt  CameraSetRecorder.cpp  CameraSetRecorder.hpp  main.cpp
common/: CMakeLists.txt  CameraBase.hpp  CameraSet.cpp  CameraSet.hpp  CameraSetBase.hpp  CameraSetFly2.cpp  CameraSetFly2.hpp  CameraSetParallel.cpp  CameraSetParallel.hpp  CameraSetVideo.cpp  CameraSetVirtual.cpp  CameraSetVirtual.hpp  CameraVirtual.cpp  CameraVirtual.hpp  Data.cpp  Data.hpp  DataProvide.cpp  DataProvide.hpp  DirDealer.cpp  FrameProvider.cpp  FrameProvider.hpp  Protocol.cpp  Protocol.hpp  TileProvider.cpp  TileProvider.hpp  Transmitter.cpp  Transmitter.hpp  VideoData.cpp  VideoData.hpp  VideoProvider.cpp  VideoProvider.hpp
common_test/: CMakeLists.txt  main.cpp
common_test_sh/: test.sh
construct/: CMakeLists.txt  Constructor.cpp  Constructor.hpp  GeometryAligner.cpp  GeometryAligner.h  GigaAligner.cpp  GigaAligner.h  GigaAligner.hpp  GigaAlignerBase.cpp  GigaAlignerBase.hpp  GigaAlignerManual.cpp  GigaAlignerManual.hpp  OpticAligner.cpp  OpticAligner.h  main.cpp
ffmpeg/: ffserver.conf
include/: giga_video.h
include/camera/: CameraSetFly2.hpp  CameraSetImage.hpp  PyCameraSetBase.hpp  PyCameraSetFly2.hpp  PyCameraSetImage.hpp  PyramidCamaraBase.hpp  PyramidCameraImage.hpp  VideoWriterBase.hpp  VideoWriterV4l2.hpp  VirtualCameraDevice.hpp
include/client/: Client.hpp
include/common/: CMakeLists.txt  CameraSetImage.hpp  DirDealer.h  DirDealer.hpp  IO.hpp  PipeWriter.hpp  Protocol.hpp  TileProvider.hpp  Transmitter.hpp
include/construct/: GigaImageMeta.hpp  PyramidAligner.hpp  PyramidAlignerAuto.hpp
include/play/: PlayerAuto.hpp  PlayerClient.hpp  PlayerServer.hpp  PlayerSlave.hpp  TileProvider.hpp  VideoProvider.hpp  WaiterBase.hpp  WaiterServer.hpp  WindowProviderBase.hpp  WindowProviderLocal.hpp  WindowProviderRemote.hpp
include/player/: Player.hpp
include/server/: FrameProvider.hpp  Player.hpp  PlayerMannual.hpp  PlayerMaster.hpp  PlayerSlave.hpp  TileProvider.hpp  VideoProvider.hpp  WaiterBase.hpp  WaiterServer.hpp  WaiterTest.hpp  WindowController.hpp  WindowProviderBase.hpp  WindowProviderLocal.hpp
master/: CMakeLists.txt  Master.cpp  Master.hpp  main.cpp
old/android/MyApplication/app/: build.gradle
old/android/MyApplication/app/src/androidTest/java/com/example/wuliwei/myapplication/: ApplicationTest.java
old/android/MyApplication/app/src/main/: AndroidManifest.xml
old/android/MyApplication/app/src/main/java/com/example/wuliwei/myapplication/: Protocal.java
old/camera/: CameraSetRecorder.hpp
old/common/: CameraSetBase.hpp  CameraSetParallel.hpp  CameraSetVideo.hpp  FrameProvider.cpp  Timer.hpp  Transmitter.hpp
old/construct/: CMakeLists.txt  GigaAlignerAuto.hpp  GigaAlignerManual.cpp  OpticAligner.cpp
old/master/: Master.cpp
old/player_client/: Client.cpp
old/player_server/: CMakeLists.txt  Server.cpp  Server.hpp
old/player_standalone/: CMakeLists.txt  Player.cpp  main.cpp
old/player_xiaoyun/: Player.cpp  Player.hpp
old/rtp/: CMakeLists.txt  Readme.txt
old/sh/: camera_show.sh  camera_show_setting.xml  player_client.sh  player_server.sh  player_xiaoyun.sh  record_master.sh  record_slave_setting.xml
old/slave/: CMakeLists.txt
player_client/: CMakeLists.txt  Client.cpp  Client.hpp  SocketClient.cpp  SocketClient.hpp  main.cpp
player_server/: CMakeLists.txt  Server.cpp  SocketServer.cpp  SocketServer.hpp  main.cpp
player_src/: CMakeLists.txt  WindowController.cpp
player_standalone/: ImagePlayer.cpp  ImagePlayer.hpp  Player.cpp  Player.hpp  main.cpp
player_xiaoyun/: CMakeLists.txt  Player.cpp  Player.hpp  main.cpp
rtp/: CMakeLists.txt  RTP.rar  rtp.cpp  rtp.h
samples/: client.sh  construct.sh  construct_giga_image_meta.sh  demo.sh  demo_client.sh  demo_giga_image.sh  demo_master.sh  demo_server.sh  demo_slave.sh  master.sh  slave.sh  test.sh  test_giga_image_meta.sh  test_read_image_tile.sh  test_read_web_video.sh  tool.sh  videostab.sh
sh/: camera.sh  camera_show.sh  camera_virtual.sh  construct.sh  master.sh  player_client.sh  player_server.sh  player_standalone.sh  player_xiaoyun.sh  record_master.sh  record_master_setting.xml  record_slave.sh  record_slave1.sh  slave.sh  slave0.sh  slave1.sh
slave/: CMakeLists.txt  Slave.cpp  Slave.hpp  main.cpp
src/: client.cpp  construct.cpp  demo.cpp  main.cpp  master.cpp  slave.cpp  test.cpp  tool.cpp  videostab.cpp
src/camera/: CameraSetFly2.cpp  CameraSetImage.cpp  CameraSetVideo.cpp  PyCameraSetFly2.cpp  PyCameraSetImage.cpp  PyramidCameraImage.cpp  VideoWriterV4l2.cpp  VirtualCameraDevice.cpp
src/client/: Client.cpp
src/common/: DirDealer.cpp  IO.cpp  PipeWriter.cpp  Protocol.cpp  Timer.cpp  Transmitter.cpp  VideoProvider.cpp
src/construct/: GeometryAligner.cpp  GigaAlignerAuto.cpp  GigaAlignerBase.cpp  GigaImageMeta.cpp  PyramidAligner.cpp  PyramidAlignerAuto.cpp
src/play/: FrameProvider.cpp  PlayerAuto.cpp  PlayerClient.cpp  PlayerMannual.cpp  PlayerServer.cpp  PlayerSlave.cpp  VideoProvider.cpp  WaiterServer.cpp  WindowProviderLocal.cpp  WindowProviderRemote.cpp
src/server/: CameraSetImage.cpp  FrameProvider.cpp  Player.cpp  PlayerAuto.cpp  PlayerMannual.cpp  PlayerMaster.cpp  PlayerSlave.cpp  TileProvider.cpp  VideoProvider.cpp  WaiterServer.cpp  WaiterTest.cpp  WindowController.cpp  WindowProviderLocal.cpp
